[package]
name = "incentive"
version = "1.0.0"
authors = ["Luca Williams <lucaw4831@gmail.com>", "LUCAW"]
edition = "2018"
description = "Cargo incentive contract"
license = "Apache-2.0"
repository = ""
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = { version = "0.16.0" }
cw2 = { version = "0.16.0" }
cw20 = { version = "0.16.0" }
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.0" }
cw-storage-plus = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.1.0"
serde_json = "1.0"
